# vdesk-connector

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deploy.ps1  install_agent.ps1  null  run_agent_direct.ps1  run_agent_local.ps1  run_viewer_direct.ps1  run_viewer_local.ps1  uninstall_agent.ps1
installer/: VDeskAgentSetup.iss  build_installer.ps1
vdesk_agent/: Cargo.toml  build.rs
vdesk_agent/src/: api.rs  control_ws.rs  main.rs  server.rs  session.rs  state.rs  vpx_wrap.c
vdesk_agent/src/services/: capture_dxgi.rs  capture_gdi.rs  input.rs  mod.rs  video.rs  vpx_enc.rs  yuv.rs
vdesk_client/__MACOSX/vdesk_client/appimage/: ._AppImageBuilder-aarch64.yml
vdesk_client/__MACOSX/vdesk_client/flutter/ios/: ._Runner.xcodeproj  ._Runner.xcworkspace
vdesk_client/__MACOSX/vdesk_client/flutter/ios/Flutter/: ._Debug.xcconfig
vdesk_viewer/: Cargo.toml  build.rs
vdesk_viewer/src/: api.rs  connection.rs  decoder.rs  display.rs  main.rs  session.rs  vpx_dec.rs  vpx_wrap.c
