[package]
name = "vdesk_agent"
version = "0.1.0"
edition = "2021"
description = "VDesk VM Agent — registers with backend, pipes Spring noVNC proxy ↔ TightVNC :5900"

[[bin]]
name = "vdesk_agent"
path = "src/main.rs"

[dependencies]
bytes = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = "0.4"
sysinfo = "0.30"
