[package]
name = "vdesk_viewer"
version = "0.1.0"
edition = "2021"
description = "VDesk Viewer — authenticates with backend, connects directly to VM agent, displays remote screen"

[[bin]]
name = "vdesk_viewer"
path = "src/main.rs"

[dependencies]
hbb_common = { path = "../vdesk_client/vdesk_client/libs/hbb_common" }
bytes = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls", "cookies"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
protobuf = { version = "3.7", features = ["with-bytes"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

# JPEG 폴백
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Window + rendering
winit = { version = "0.30", features = ["rwh_06"] }
softbuffer = "0.4"

[build-dependencies]
cc = "1"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
